leo3/tests/surface_ui/default_no_containers.stderr
error[E0432]: unresolved import `leo3::types::LeanHashMap`
 --> tests/surface_ui/default_no_containers.rs:1:5
  |
1 | use leo3::types::LeanHashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ no `LeanHashMap` in `types`
  |
note: found an item that was configured out
 --> src/types/mod.rs
  |
  | #[cfg(feature = "experimental-containers")]
  |       ----------------------------------- the item is gated behind the `experimental-containers` feature
  | #[cfg_attr(docsrs, doc(cfg(feature = "experimental-containers")))]
  | pub use containers::{LeanHashMap, LeanHashSet, LeanRBMap};
  |                      ^^^^^^^^^^^
