leo3/tests/surface_ui/default_no_containers.rs
use leo3::types::LeanHashMap;

fn main() {
    let _ = std::any::type_name::<LeanHashMap<'static, (), ()>>();
}
